--- a/network-monitor.yaml
+++ b/network-monitor.yaml
@@ -1,5 +1,8 @@
 substitutions:
   unificontroller: https://192.168.1.100:8443 #SET THIS TO THE IP AND PORT OF YOUR UNIFI CONTROLLER
+  username: !secret unifi_user
+  password: !secret unifi_pass
+  session: !secret unifi_session
   icon_lan: 󰌗
   icon_wan: 󰖟
   icon_wlan: 󰖩
@@ -14,6 +17,11 @@ substitutions:
   icon_homeassistant: 󰟐
   icon_online: 󰗠
   icon_offline: 󰅙 
+
+globals:
+  - id: unifisession
+    type: std::string
+    initial_value: ${session}
   
 esphome:
   name: network-monitor
@@ -25,7 +33,7 @@ esphome:
     then:
       if:
         condition:
-          binary_sensor.is_off: proxmox_status
+          binary_sensor.is_off: server_status
         then:
           - switch.turn_on: power_on
 logger:
@@ -33,6 +41,8 @@ logger:
     ping_esp32: WARN
 api:
 captive_portal:
+http_request:
+  id: http_component
 ota:
 wifi:
   ssid: !secret wifi_ssid
@@ -40,6 +50,16 @@ wifi:
   ap:
     ssid: "Network Monitor Fallback Hotspot"
     password: !secret wifi_password
+  manual_ip:
+    static_ip: 192.168.2.5 #SET TO YOUR DEVICE'S IP
+    gateway: 192.168.2.1 #SET TO YOUR NETWORK'S GATEWAY
+    subnet: 255.255.255.0
+  fast_connect: on
+  power_save_mode: none
+external_components:
+  - source:
+      type: local
+      path: ./components/
 spi:
   clk_pin: GPIO18
   mosi_pin: GPIO19
@@ -47,18 +67,15 @@ spi:
 time:
   - platform: sntp
     id: esptime
-    on_time: ### WORK IN PROGRESS - This action logs into the Unifi Controller API, but doesn't do anything yet
-      - seconds: 0
-        minutes: /1    
-        then:    
+    on_time:
+      - seconds: /30
+        then:
           - http_request.post:
               url: ${unificontroller}/api/login
               verify_ssl: false
-              headers:
-                Content-Type: application/json
               json: |-
-                root["username"] = "YOUR_USERNAME";
-                root["password"] = "YOUR_PASSWORD";
+                root["username"] = ${username};
+                root["password"] = ${password};
               on_response:
                 then:
                   - if:
@@ -68,8 +85,23 @@ time:
                       then:
                         - logger.log:
                             level: INFO
-                            format: "!! CONNECTION TO UNIFI CONTROLLER SUCCEEDED !!"
+                            format: "!! CONNECTION TO UNIFI CONTROLLER SUCCEEDED, FETCHING SENSOR DATA !!"
                         - lambda: "id(unifi_api).publish_state(true);"
+                        - delay: 1s                     
+                        - http_request.get:
+                            url: ${unificontroller}/api/s/default/stat/health
+                            verify_ssl: false
+                            headers:
+                              Cookie: !lambda return id(unifisession).c_str();
+                            on_response:
+                              - lambda: |-
+                                  std::string data = id(http_component).get_string();
+                                  json::parse_json(data, [](JsonObject root) {
+                                  uint16_t num_wifiusers_int = root["data"][0]["num_user"];
+                                  uint16_t num_wiredusers_int = root["data"][3]["num_user"];
+                                  id(clients_wireless).publish_state(num_wifiusers_int);
+                                  id(clients_wired).publish_state(num_wiredusers_int);
+                                  });
                       else:
                         - logger.log:
                             level: INFO
@@ -231,11 +263,11 @@ text_sensor:
 
 sensor: 
   - platform: template
-    name: "Number of Wireless Clients" ### WORK IN PROGRESS - This sensor isn't used yet
+    name: "Number of Wireless Clients"
     id: clients_wireless
     
   - platform: template
-    name: "Number of Wired Clients" ### WORK IN PROGRESS - This sensor isn't used yet
+    name: "Number of Wired Clients"
     id: clients_wired
     
   - platform: ping
@@ -265,20 +297,6 @@ sensor:
       - multiply: 0.001
     name: "AdGuard Queries"
     id: adguard_queries
-    internal: true
-    
-  - platform: homeassistant
-    entity_id: sensor.unifi_gateway_lan
-    attribute: num_user
-    name: "Unifi LAN Devices"
-    id: unifi_lan_devices
-    internal: true
-  
-  - platform: homeassistant
-    entity_id: sensor.unifi_gateway_wlan
-    attribute: num_user
-    name: "Unifi WLAN Devices"
-    id: unifi_wlan_devices
     internal: true
     
   - platform: homeassistant
@@ -341,21 +359,23 @@ binary_sensor:
             level: INFO
             format: "!! CONNECTION TO HOME ASSISTANT HAS BEEN LOST !!"
   
-    - platform: template
-    name: "Unifi API Connection" ### WORK IN PROGRESS - The following lambda doesn't cause any errors, but is a placeholder
+  - platform: template
+    name: "Unifi API Connection"
     id: unifi_api
     on_press:
       then:
         - logger.log:
             level: INFO
-            format: "!! SENDING NETWORK CLIENT COUNTS !!"
-        - lambda: |-
-            id(clients_wireless).publish_state(id(unifi_wlan_devices).state);
-            id(clients_wired).publish_state(id(unifi_lan_devices).state);
+            format: "!! CONNECTED TO UNIFI CONTROLLER API !!"
+    on_release:
+      then:
+        - logger.log:
+            level: INFO
+            format: "!! DISCONNECTED FROM UNIFI CONTROLLER API !!"
   
   - platform: gpio
-    name: "Proxmox Server Status"
-    id: proxmox_status
+    name: "Server Status"
+    id: server_status
     internal: true
     pin:
       number: GPIO13
@@ -365,12 +385,12 @@ binary_sensor:
       then:
         - logger.log:
             level: INFO
-            format: "!! PROXMOX SERVER POWER HAS BEEN RESTORED !!"
+            format: "!! SERVER POWER HAS BEEN RESTORED !!"
     on_release:
       then:
         - logger.log:
             level: INFO
-            format: "!! PROXMOX SERVER HAS SHUT DOWN !!"
+            format: "!! SERVER HAS SHUT DOWN !!"
         - delay: 3000ms
         - switch.turn_on: power_on
       
@@ -479,9 +499,9 @@ display:
           it.printf(195, 43, id(calibri_36), id(white), TextAlign::RIGHT, "%.1f", id(upload_speed).state);
           it.line(5, 80, 235, 80, id(darkgrey));
           it.print(5, 90, id(mdi_36), id(darkgrey), TextAlign::LEFT, "$icon_lan" );
-          it.printf(45, 93, id(calibri_36), id(white), TextAlign::LEFT, "%.0f", id(unifi_lan_devices).state);
+          it.printf(45, 93, id(calibri_36), id(white), TextAlign::LEFT, "%.0f", id(clients_wired).state);
           it.print(235, 90, id(mdi_36), id(darkgrey), TextAlign::RIGHT, "$icon_wlan" );
-          it.printf(195, 93, id(calibri_36), id(white), TextAlign::RIGHT, "%.0f", id(unifi_wlan_devices).state);
+          it.printf(195, 93, id(calibri_36), id(white), TextAlign::RIGHT, "%.0f", id(clients_wireless).state);
           
       - id: page3 ### Performance ###
         lambda: |-
